Refactorizar controlador de información de contacto para obtener todos los contactos desde MongoDB

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "main": "server.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [
     "mongo",
@@ -15,6 +16,7 @@
   "author": "Anderson Gil",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongodb": "^6.9.0"
