--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "nodemon server.js",
     "start": "node server.js",
-    "lint": "npx eslint . --ext .js"
+    "lint": "npx eslint . --ext .js",
+    "swagger": "node ./swagger.js"
   },
   "keywords": [
     "mongo",
@@ -18,9 +19,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongodb": "^6.9.0"
+    "mongodb": "^6.9.0",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
